# services/express-server/api-spec.yml
@@ -1,255 +1,215 @@
-swagger: "2.0"
+openapi: 3.0.0
 info:
-  description: "Simple Dependency Mapping API"
-  version: "1.0.0"
-  title: "Dependency Mappings API"
-  termsOfService: "todo"
+  description: Simple Dependency Mapping API
+  version: "1.0.0-oas3"
+  title: Dependency Mappings API
+  termsOfService: todo
   contact:
-    email: "vaisanen.toni@gmail.com"
+    email: vaisanen.toni@gmail.com
   license:
-    name: "MIT"
-    url: "https://opensource.org/licenses/MIT"
-host: "localhost:30001"
-basePath: "/v2"
+    name: MIT
+    url: 'https://opensource.org/licenses/MIT'
 tags:
-- name: "Asset"
-  description: "assets"
-  externalDocs:
-    description: "todo"
-    url: "http://docs.localhost/assets"
-- name: "Connection"
-  description: "connections"
-- name: "Mapping"
-  description: "mappings"
-  externalDocs:
-    description: "todo"
-    url: "http://docs.localhost/mappings"
-schemes:
-- "http"
+  - name: Asset
+    description: assets
+    externalDocs:
+      description: todo
+      url: 'http://docs.localhost/assets'
+  - name: Connection
+    description: connections
+  - name: Mapping
+    description: mappings
+    externalDocs:
+      description: todo
+      url: 'http://docs.localhost/mappings'
 paths:
   /asset:
     post:
       tags:
-      - "asset"
-      summary: "Add a new asset to the DB"
-      description: ""
-      operationId: "addAsset"
-      consumes:
-      - "application/json"
-      produces:
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "body"
-        description: "An asset object that is to be stored."
+        - asset
+      summary: Add a new asset to the database
+      operationId: addAsset
+      requestBody:
+        description: Asset object that needs to be added to the database
         required: true
-        schema:
-          $ref: "#/definitions/Asset"
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Asset'
       responses:
-        405:
-          description: "Invalid input"
-      security:
-      - petstore_auth:
-        - "write:pets"
-        - "read:pets"
+        '201':
+          description: Created
+          content:
+            application/hal+json:
+              schema:
+                $ref: '#/components/schemas/Asset'
+        '405':
+          description: Invalid input
+        '409':
+          description: Asset already exists
     put:
       tags:
-      - "pet"
-      summary: "Update an existing pet"
-      description: ""
-      operationId: "updatePet"
-      consumes:
-      - "application/json"
-      - "application/xml"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "body"
-        description: "Pet object that needs to be added to the store"
-        required: true
-        schema:
-          $ref: "#/definitions/Asset"
+        - asset
+      summary: Update an existing asset
+      operationId: updateAsset
       responses:
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Pet not found"
-        405:
-          description: "Validation exception"
-      security:
-      - petstore_auth:
-        - "write:pets"
-        - "read:pets"
-  /connection/:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Asset not found
+        '405':
+          description: Validation exception
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Asset'
+        description: Asset object that needs to be updated in the database
+        required: true
+
+  '/asset/{id}':
     get:
       tags:
-      - "store"
-      summary: "Returns pet inventories by status"
-      description: "Returns a map of status codes to quantities"
-      operationId: "getInventory"
-      produces:
-      - "application/json"
-      parameters: []
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            type: "object"
-            additionalProperties:
-              type: "integer"
-              format: "int32"
-
-  /mapping/:
-    get:
-      tags:
-      - "store"
-      summary: "Returns mapping list based on query"
-      description: "Returns a list of mappings"
-      operationId: "getMappings"
-      produces:
-      - "application/json"
-      parameters: []
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            type: "object"
-            additionalProperties:
-              type: "integer"
-              format: "int32"
-
-  /tag/:
-    post:
-      tags:
-      - "store"
-      summary: "Place an order for a pet"
-      description: ""
-      operationId: "placeOrder"
-      produces:
-      - "application/xml"
-      - "application/json"
+        - asset
+      summary: Find asset by ID
+      description: Returns a single asset
+      operationId: getAssetById
       parameters:
-      - in: "body"
-        name: "body"
-        description: "order placed for purchasing the pet"
-        required: true
-        schema:
-          $ref: "#/definitions/Tag"
-      responses:
-        200:
-          description: "successful operation"
+        - name: id
+          in: path
+          description: ID of asset to return
+          required: true
           schema:
-            $ref: "#/definitions/Tag"
-        400:
-          description: "Invalid tag"
+            type: string
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/hal+json:
+              schema:
+                $ref: '#/components/schemas/Asset'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Asset not found
+    put:
+      tags:
+        - asset
+      summary: Updates an asset in the database with form data
+      operationId: updateAssetWithJSON
+      parameters:
+        - name: id
+          in: path
+          description: ID of asset to return
+          required: true
+          schema:
+            type: string
+      responses:
+        '405':
+          description: Invalid input
+      #security:
+      #  - petstore_auth:
+      #      - 'write:pets'
+      #      - 'read:pets'
+    delete:
+      tags:
+        - asset
+      summary: Deletes a pet
+      operationId: deletePet
+      parameters:
+        - name: id
+          in: path
+          description: Asset id to delete
+          required: true
+          schema:
+            type: string
+
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Asset not found
 
 
 
-securityDefinitions:
-  petstore_auth:
-    type: "oauth2"
-    authorizationUrl: "http://petstore.swagger.io/oauth/dialog"
-    flow: "implicit"
-    scopes:
-      write:pets: "modify pets in your account"
-      read:pets: "read your pets"
-  api_key:
-    type: "apiKey"
-    name: "api_key"
-    in: "header"
-
-definitions:
-  Asset:
-    type: "object"
-    properties:
-      _id:
-        type: "string"
-      name:
-        type: "string"
-      description:
-        type: "string"
-      _embedded:
-        type: "object"
-        properties:
-          connected_to:
-            type: "array"
-            items:
-              type: "object"
-              properties:
-                href:
-                  type: "url"
-                name:
-                  type: "string"
-
-          tags:
-            type: "array"
-            items:
-              type: "object"
-      _links:
-        type: "object"
-        properties:
-          href:
-            type: "string"
-            format: "url"
-    xml:
-      name: "Order"
-  Connection:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      name:
-        type: "string"
-    xml:
-      name: "Category"
-  Mapping:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      username:
-        type: "string"
-      firstName:
-        type: "string"
-      lastName:
-        type: "string"
-      email:
-        type: "string"
-      password:
-        type: "string"
-      phone:
-        type: "string"
-      userStatus:
-        type: "integer"
-        format: "int32"
-        description: "User Status"
-    xml:
-      name: "User"
-  Tag:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      name:
-        type: "string"
-    xml:
-      name: "Tag"
-
-  ApiResponse:
-    type: "object"
-    properties:
-      code:
-        type: "integer"
-        format: "int32"
-      type:
-        type: "string"
-      message:
-        type: "string"
 externalDocs:
-  description: "Find out more about Swagger"
-  url: "http://swagger.io"
+  description: Find out more about Swagger
+  url: 'http://swagger.io'
+servers:
+  - url: 'https://virtserver.swaggerhub.com/tvaisanen_dev/dependency-maps/1.0.0'
+  - url: 'http://virtserver.swaggerhub.com/tvaisanen_dev/dependency-maps/1.0.0'
+components:
+  requestBodies:
+    AssetArray:
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/Asset'
+      description: List of asset objects
+      required: true
+  securitySchemes:
+    petstore_auth:
+      type: oauth2
+      flows:
+        implicit:
+          authorizationUrl: 'http://petstore.swagger.io/oauth/dialog'
+          scopes:
+            'write:pets': modify pets in your account
+            'read:pets': read your pets
+    api_key:
+      type: apiKey
+      name: api_key
+      in: header
+  schemas:
+    _embedded_object:
+      type: object
+      properties:
+        _id:
+          type: string
+        name:
+          type: string
+        href:
+          type: string
+    _links:
+      type: object
+      properties:
+        href:
+          type: string
+          format: url
+    Asset:
+      type: object
+      properties:
+        _id:
+          type: string
+        name:
+          type: string
+        description:
+          type: string
+        _embedded:
+          type: object
+          properties:
+            connected_to:
+              type: array
+              items:
+                $ref: '#/components/schemas/_embedded_object'
+            tags:
+              type: array
+              items:
+                type: object
+        _links:
+          $ref: '#/components/schemas/_links'
+      xml:
+        name: Order
+
+    ApiResponse:
+      type: object
+      properties:
+        code:
+          type: integer
+          format: int32
+        type:
+          type: string
+        message:
+          type: string
